--- a/Notification.html
+++ b/Notification.html
@@ -98,128 +98,60 @@
 </head>
 
 <body class="bg-dark">
-    <!-- Start: Section Title -->
-    <div class="bg-dark title-div">
-        <h1 class="fs-4 text-light bg-dark" style="display: flex;  
-        justify-content: center;  
-        align-items: center; ">Notification</h1>
-    </div><!-- End: Section Title -->
-    <!-- Start: Black Navbar -->
-    <nav
-    class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button"
-    style="
-      background: rgb(34, 34, 34);
-      border-radius: 20;
-      border-top-left-radius: 20;
-      border-top-right-radius: 20;
-      border-bottom-right-radius: 20;
-      border-bottom-left-radius: 20;
-      border-style: none;
-      padding-top: 0; 
-      padding-bottom: 10px;
-    "
-  >
-    <div class="container">
-      <button
-        data-bs-toggle="collapse"
-        class="navbar-toggler"
-        data-bs-target="#navcol-1"
-      >
-        <span class="visually-hidden">Toggle navigation</span
-        ><span class="navbar-toggler-icon"></span>
-      </button>
-      <div>
-        <a class="navbar-brand" href="index.html"
-          ><span
-            ><img width="100px" height="100px" src="/assets/img/logo.png"
-          /></span>
-        </a>
-      </div>
-      <div
-        class="collapse navbar-collapse"
-        id="navcol-1"
-        style="color: rgb(72, 72, 72)"
-      >
-        <ul class="navbar-nav nav-right">
-          <li class="nav-item">
-            <a
-              class="nav-link active"
-              href="index.html"
-              style="color: rgba(57, 53, 53, 0.9)"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="viewEvents.html"
-              style="color: rgba(57, 53, 53, 0.9)"
-              >View Events</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="calendar.html"
-              style="color: rgba(57, 53, 53, 0.9)"
-              >Calendar</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="Notification.html"
-              style="color: rgba(57, 53, 53, 0.9)"
-              >Notification</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="yourEvents.html"
-              style="color: rgba(57, 53, 53, 0.9)"
-              >Your event</a
-            >
-          </li>
-        </ul>
-        <p class="ms-auto navbar-text actions">
-          <a href="login.html" class="btn btn" role="button">Log In</a>
-          <a href="signup.html" class="btn btn-light" role="button">Sign Up</a>
-        </p>
-      </div>
-    </div>
-  </nav>
-    <form class="myForm">
-
-        <fieldset>
-            <legend style="color:white">What is your Category would you like to subscribe to?</legend>
-            <br>
-            <label class="choice" style="color:white"> Athletic/Sport </label>
-            <input type="checkbox" name="extras" value="baby">
-            <br>
-            <label class="choice" style="color:white"> Recreation and leisure </label>
-            <input type="checkbox" name="extras" value="wheelchair">
-            <br>
-            <label class="choice" style="color:white"> Board Meeting </label>
-            <input type="checkbox" name="extras" value="tip">
-            <br>
-            <label class="choice" style="color:white"> Community meet </label>
-            <input type="checkbox" name="extras" value="tip">
-            <br>
-            <label class="choice" style="color:white"> Informational </label>
-            <input type="checkbox" name="extras" value="tip">
-            <br>
-            <label class="choice" style="color:white"> Other </label>
-            <input type="checkbox" name="extras" value="tip">
-            <br>
-        </fieldset>
-        <div class="containers">
-            <button style="margin-left: auto;margin-right:auto">Save</button>
+  <!-- Start: Section Title -->
+  <div class="bg-dark title-div">
+    <h1 class="fs-4 text-light bg-dark" style="display: flex;  
+    justify-content: center;  
+    align-items: center; ">Notification</h1>
+</div><!-- End: Section Title -->
+<!-- Start: Black Navbar -->
+<nav class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button" style="background: rgb(34, 34, 34);border-radius: 20;border-top-left-radius: 20;border-top-right-radius: 20;border-bottom-right-radius: 20;border-bottom-left-radius: 20;border-style: none;padding-top: 0;padding-bottom: 10px;">
+    <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div><a class="navbar-brand" href="#"><span><i class="fa fa-bars"></i></span> </a></div>
+        <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(255,255,255);">
+            <ul class="navbar-nav nav-right">
+                <li class="nav-item"><a class="nav-link active" href="home.html" style="color: rgba(224,217,217,0.9);">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="calendar.html" style="color: rgba(224,217,217,0.9);">Calendar</a></li>
+                <li class="nav-item"><a class="nav-link" href="Notification.html" style="color: rgba(224,217,217,0.9);">Notification</a></li>
+                <li class="nav-item"><a class="nav-link" href="Your event.html" style="color: rgba(224,217,217,0.9);">Your event</a></li>
+            </ul><!-- Start: Actions -->
+            <p class="ms-auto navbar-text actions"><a class="login" role="button" href="Login Page.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200); border-radius: 10px   ;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Log In</a> 
+                <a class="btn btn-light action-button" role="button" href="Sign Up Page.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200);border-radius: 10px;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Sign Up</a></p><!-- End: Actions -->
         </div>
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/bs-init.js"></script>
-        <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
-        <script src="assets/js/sidebar-menu.js"></script>
+    </div>
+</nav><!-- End: Black Navbar -->
+<form class="myForm" >
+
+    <fieldset>
+     <legend style="color:white">What is your Category would you like to subscribe to?</legend>
+     <br>
+    <label class="choice" style="color:white">  Athletic/Sport </label>
+    <input type="checkbox" name="extras" value="Athletic/Sport" id="check1">
+    <br>
+    <label class="choice" style="color:white">  Recreation and leisure </label>
+    <input type="checkbox" name="extras" value="Recreation and leisure" id="check2" >
+    <br>
+    <label class="choice" style="color:white">  Board Meeting </label>
+    <input type="checkbox" name="extras" value="Board Meeting" id="check3" >
+    <br>
+    <label class="choice" style="color:white">  Community meet </label>
+    <input type="checkbox" name="extras" value="Community meet" id="check4">
+    <br>
+   <label class="choice" style="color:white">  Informational </label>
+   <input type="checkbox" name="extras" value="Informational s" id="check5" >
+   <br>
+    <label class="choice" style="color:white">  Other </label>
+    <input type="checkbox" name="extras" value="Other" id="check6" >
+    <br>
+    </fieldset>
+    <div class="containers">  
+    <button style="margin-left: auto;margin-right:auto" onclick="checkfunction()">Save</button>   
+    <p id="message" style="display:none;color: white;">Checkbox is Checked Now!</p>
+    </div>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/bs-init.js"></script>
+<script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
+<script src="assets/js/sidebar-menu.js"></script>
 </body>
 
 </html>
