--- a/login.html
+++ b/login.html
@@ -27,30 +27,15 @@
 <body class="bg-dark">
     <!-- Start: Juvi - Push Empty Space 20px -->
     <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
-    <h1 class="text-white" style="padding-bottom: 0px;margin-top: 147px;padding-left: 0px;margin-left: 796px;">Login
-    </h1>
-    <label class="form-label text-white-50"
-        style="padding-bottom: 0px;padding-top: 0px;padding-left: 28px;margin-top: 5px;margin-left: 746px;">Email:</label>
-    <input type="email" id="email" name="email" style="width: 300px; height: 10px;"><br><br>
-    <!-- Start: Juvi - Push Empty Space 20px -->
-    <div class="Push-20"><label class="form-label text-white-50"
-            style="padding-left: 0px;padding-bottom: 0px;margin-bottom: -1px;padding-top: 0px;margin-top: -2px;margin-left: 749px;">Password:</label>
-        <!-- Start: Juvi - Push Empty Space 20px -->
+    <h1 class="text-white" style="padding-bottom: 0px;margin-top: 147px;padding-left: 0px;margin-left: 796px;">Login</h1>
+    <label class="form-label text-white-50" style="padding-bottom: 0px;padding-top: 0px;padding-left: 28px;margin-top: 5px;margin-left: 746px;">Email:</label>
+    <input type="email" id="email" name="email" style="width: 300px; height: 10px;"><br><br><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"><label class="form-label text-white-50" style="padding-left: 0px;padding-bottom: 0px;margin-bottom: -1px;padding-top: 0px;margin-top: -2px;margin-left: 749px;">Password:</label><!-- Start: Juvi - Push Empty Space 20px -->
         <input type="Password" id="Password" name="Password" style="width: 300px; height: 10px;">
         <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
-    </div><!-- End: Juvi - Push Empty Space 20px --><a class="d-block" href="Forgot%20Password.html"
-        style="margin-left: 745px;margin-top: 14px;">Forgot password?</a><!-- Start: Juvi - Push Empty Space 20px -->
-    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><label
-        class="form-label text-white bg-warning float-start"
-        style="padding-right: 23px;padding-left: 26px;margin-left: 725px;">Log In</label><a
-        class="btn btn-primary bg-warning" role="button" href="signup.html"
-        style="margin-left: 26px;padding-left: 19px;padding-right: 18px;margin-bottom: 0px;padding-bottom: 0px;padding-top: 6px;margin-top: -2px;">Sign
-        up</a><!-- Start: Juvi - Push Empty Space 20px -->
-    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><img src="assets/img/loginPic%201.png"
-        style="margin-left: -2px;padding-right: 120px;margin-right: 98px;margin-top: -446px;"><img
-        src="assets/img/Ellipse%203.png" style="margin-bottom: 370px;margin-left: -14px;"><img
-        src="assets/img/Ellipse%201.png" style="margin-left: 34px;margin-bottom: 376px;"><img
-        src="assets/img/Ellipse%204.png" style="margin-left: 50px;margin-bottom: 376px;">
+    </div><!-- End: Juvi - Push Empty Space 20px --><a class="d-block" href="Forgot%20Password.html" style="margin-left: 745px;margin-top: 14px;">Forgot password?</a><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><a href="index.html" class="btn btn-primary bg-warning" style="padding-right: 23px;padding-left: 26px;margin-left: 725px;">Log In</a><a class="btn btn-primary bg-warning" role="button" href="signup.html" style="margin-left: 26px;padding-left: 19px;padding-right: 18px;margin-bottom: 0px;padding-bottom: 0px;padding-top: 6px;margin-top: -2px;">Sign up</a><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><img src="assets/img/loginPic%201.png" style="margin-left: -2px;padding-right: 120px;margin-right: 98px;margin-top: -446px;"><img src="assets/img/Ellipse%203.png" style="margin-bottom: 370px;margin-left: -14px;"><img src="assets/img/Ellipse%201.png" style="margin-left: 34px;margin-bottom: 376px;"><img src="assets/img/Ellipse%204.png" style="margin-left: 50px;margin-bottom: 376px;">
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
     <script src="assets/js/sidebar-menu.js"></script>
