--- a/Notification.html
+++ b/Notification.html
@@ -138,7 +138,7 @@
     <input type="checkbox" name="extras" value="Community meet" id="check4">
     <br>
    <label class="choice" style="color:white">  Informational </label>
-   <input type="checkbox" name="extras" value="Informational s" id="check5" >
+   <input type="checkbox" name="extras" value="Informational" id="check5" >
    <br>
     <label class="choice" style="color:white">  Other </label>
     <input type="checkbox" name="extras" value="Other" id="check6" >
@@ -146,12 +146,13 @@
     </fieldset>
     <div class="containers">  
     <button style="margin-left: auto;margin-right:auto" onclick="checkfunction()">Save</button>   
-    <p id="message" style="display:none;color: white;">Checkbox is Checked Now!</p>
+    <p id="message" style="color: white;"></p>
     </div>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/js/bs-init.js"></script>
 <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
 <script src="assets/js/sidebar-menu.js"></script>
+<script src="/js/check.js"></script>
 </body>
 
 </html>
